--- a/templates/admin/content/stats.html.twig
+++ b/templates/admin/content/stats.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Statisique{% endblock %}
 
+{% set hoverBackgroundColorPie = ['#67686f', '#17a673', '#5d14d4', '#b73e75', '#c34236', '#d86f17', '#4568ce', '#81b544'] %}
+{% set backgroundColorPie = ['#858796', '#1cc88a', '#6610f2', '#e83e8c', '#e74a3b', '#fd7e14', '#4e73df', '#8bc34a'] %}
+
 {% block main %}
 
     <div class="container-fluid">
@@ -9,95 +12,180 @@
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Informations pour le serious game {{ content.title }}</h1>
         </div>
+        {% if statsPercentAge == false %}
+            <div class="row justify-content-md-center align-items-center">
+                <div class="col-auto text-align">
+                    <div class="alert alert-warning mt-3 mx-auto">
+                        <h4 class="alert-heading">Il n'y a aucun participant à ce jeu sérieux.</h4>
+                    </div>
+                </div>
+            </div>   
+        {% else %}
+            <div class="row justify-content-md-center">
 
-        <div class="row justify-content-md-center">
-            <div class="col-xl-3 col-md-6 mb-4">
-            <div class="card border-left-primary shadow h-100 py-2">
-                <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre d'utilisateur{{ (nbParticipateContents > 1) ? 's' : '' }} inscrit{{ (nbParticipateContents > 1) ? 's' : '' }}</div>
-                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbParticipateContents }}</div>
-                    </div>
-                    <div class="col-auto">
-                    <i class="fas fa-user-injured fa-2x text-gray-300"></i>
-                    </div>
-                </div>
-                </div>
-            </div>
-            </div>
-        </div>
-        <div class="row">
-            <!-- Donut Chart -->
-            <div class="col-xl-4 col-lg-5">
-                <div class="card shadow mb-4">
-                    <!-- Card Header - Dropdown -->
-                    <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Activité des utilisateurs sur le jeu serieux</h6>
-                    </div>
-                    <!-- Card Body -->
-                    <div class="card-body">
-                        <div class="chart-pie pt-4">
-                            <canvas id="myPieChart"></canvas>
+                <div class="col-xl-6 col-md-6 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Temps moyen passé sur le jeu sérieux</div>
+                                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ avgDuration }}</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-user-clock fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="mt-4 text-center small">
-                            <span class="mr-2">
-                                <i class="fas fa-circle text-primary"></i> En cours
-                            </span>
-                            <span class="mr-2">
-                                <i class="fas fa-circle text-success"></i> Terminé
-                            </span>
-                        </div>                        
                     </div>
-                </div>                    
+                </div>
+
+                <div class="col-xl-6 col-md-6 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Temps moyen d’achèvement du jeu sérieux</div>
+                                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ avgDiffDate }}</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-hourglass-end fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-xl-3 col-md-6 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Nombre d'utilisateur{{ (nbParticipateContents > 1) ? 's' : '' }} inscrit{{ (nbParticipateContents > 1) ? 's' : '' }}</div>
+                                    <div class="h5 mb-0"><span class="font-weight-bold text-gray-800">{{ nbParticipateContents }}</div>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="fas fa-user fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-      
+            <div class="row">
+                <!-- Donut Chart -->
+                <div class="col-xl-4 col-lg-5">
+                    <div class="card shadow mb-4">
+                        <!-- Card Header - Dropdown -->
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">Activité des utilisateurs sur le jeu serieux</h6>
+                        </div>
+                        <!-- Card Body -->
+                        <div class="card-body">
+                            <div class="chart-pie">
+                                <canvas id="chartCompleted"></canvas>
+                            </div>                     
+                        </div>
+                    </div>                    
+                </div>
+                <div class="col-xl-4 col-lg-5">
+                    <div class="card shadow mb-4">
+                        <!-- Card Header - Dropdown -->
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">Tranche d'age moyenne utilisateurs</h6>
+                        </div>
+                        <!-- Card Body -->
+                        <div class="card-body">
+                            <div class="chart-pie">
+                                <canvas id="chartAge"></canvas>
+                            </div>                     
+                        </div>
+                    </div>                    
+                </div>            
+            </div>
+      {% endif %}
     </div>
 {% endblock %}
 
 {% block javascripts %}
+    {% if statsPercentAge != false %}
+        <!-- Page level plugins -->
+        <script src="/vendor/chart.js/Chart.min.js"></script>
+        <script>
+            // Set new default font family and font color to mimic Bootstrap's default styling
+            Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+            Chart.defaults.global.defaultFontColor = '#858796';
 
-  <!-- Page level plugins -->
-  <script src="/vendor/chart.js/Chart.min.js"></script>
-  <script>
-    // Set new default font family and font color to mimic Bootstrap's default styling
-    Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
-    Chart.defaults.global.defaultFontColor = '#858796';
+            // Pie Chart Example
+            var ctx = document.getElementById("chartCompleted");
 
-    // Pie Chart Example
-    var ctx = document.getElementById("myPieChart");
+            var myPieChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: {
+                labels: ["En cours", "Terminé"],
+                datasets: [{
+                data: {{ percentCompletedGame|json_encode()|raw }},
+                backgroundColor: ['#4e73df', '#1cc88a'],
+                hoverBackgroundColor: ['#2e59d9', '#17a673'],
+                hoverBorderColor: "rgba(234, 236, 244, 1)",
+                }],
+            },
+            options: {
+                maintainAspectRatio: false,
+                tooltips: {
+                    callbacks: {
+                        label: function(tooltipItem, data) {
+                        return data['labels'][tooltipItem['index']] + ' => ' + data['datasets'][0]['data'][tooltipItem['index']] + '%';
+                        }
+                    },            
+                    backgroundColor: "rgb(255,255,255)",
+                    bodyFontColor: "#858796",
+                    borderColor: '#dddfeb',
+                    borderWidth: 1,
+                    xPadding: 15,
+                    yPadding: 15,
+                    displayColors: false,
+                    caretPadding: 10,
+                },
+                cutoutPercentage: 65,
+            },
+            });
 
-    var myPieChart = new Chart(ctx, {
-    type: 'doughnut',
-    data: {
-        labels: ["En cours", "Terminé"],
-        datasets: [{
-        data: {{ percentCompletedGame|json_encode()|raw }},
-        backgroundColor: ['#4e73df', '#1cc88a'],
-        hoverBackgroundColor: ['#2e59d9', '#17a673'],
-        hoverBorderColor: "rgba(234, 236, 244, 1)",
-        }],
-    },
-    options: {
-        maintainAspectRatio: false,
-        tooltips: {
-        backgroundColor: "rgb(255,255,255)",
-        bodyFontColor: "#858796",
-        borderColor: '#dddfeb',
-        borderWidth: 1,
-        xPadding: 15,
-        yPadding: 15,
-        displayColors: false,
-        caretPadding: 10,
-        },
-        legend: {
-            display: false
-        },
-        cutoutPercentage: 80,
-    },
-    });
-  </script>
+            // Pie Chart Example
+            var ctx = document.getElementById("chartAge");
+
+            var myPieChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: {
+                labels: {{ statsPercentAge.label|json_encode()|raw }},
+                datasets: [{
+                data: {{ statsPercentAge.value|json_encode()|raw }},
+                backgroundColor: {{ backgroundColorPie|json_encode()|raw }},
+                hoverBackgroundColor: {{ hoverBackgroundColorPie|json_encode()|raw }},
+                hoverBorderColor: "rgba(234, 236, 244, 1)",
+                }],
+            },
+            options: {
+                maintainAspectRatio: false,    
+                tooltips: {
+                callbacks: {
+                    label: function(tooltipItem, data) {
+                    return data['labels'][tooltipItem['index']] + ' => ' + data['datasets'][0]['data'][tooltipItem['index']] + '%';
+                    }
+                },
+                backgroundColor: "rgb(255,255,255)",
+                bodyFontColor: "#858796",
+                borderColor: '#dddfeb',
+                borderWidth: 1,
+                xPadding: 15,
+                yPadding: 15,
+                displayColors: false,
+                caretPadding: 10,
+                },
+                cutoutPercentage: 65,
+            },
+            });    
+        </script>
+    {% endif %}
 
 
 {% endblock %}
