--- a/templates/content/play.html.twig
+++ b/templates/content/play.html.twig
@@ -1,12 +1,13 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}{{ content.title }}{% endblock %}
-
-{% block main %}
-    <div class="container">
-        <h1>{{ content.title }}</h1>
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="{{ content.link }}"></iframe>
-        </div>
-    </div>
-{% endblock %}
+<html>
+    <head></head>
+    <body style="margin: 0; padding: 0;">
+        <iframe 
+            id="sg-{{ content.slug }}"
+            name = "sg-{{ content.slug }}"
+            title="{{ content.title }}" 
+            width="100%" 
+            height="100%" 
+            src="{{ content.link }}">
+        </iframe>
+    </body>
+</html>
