--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -38,7 +38,7 @@
                                         <i class="fas fa-search-plus fa-3x"></i>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="{{ vich_uploader_asset(content, 'coverImageFile') | imagine_filter('thumb') }}" alt="couverture serious game {{ content.title }}">
+                                <img class="img-fluid" src="{{ vich_uploader_asset(content, 'coverImageFile') | imagine_filter('thumbRec') }}" alt="couverture serious game {{ content.title }}">
                             </a>
                         </div>
 
@@ -80,10 +80,14 @@
                                             </div>
                                             
                                             <p class="mb-5 mt-3">{{ content.description | raw}}</p>
-                                            <a class="btn btn-success btn-lg rounded-pill" href="{{ path('contents_play', {'slug': content.slug }) }}">
-                                            <i class="fa fa-close"></i>
-                                                Voir le jeu
-                                            </a>
+                                            <form action="{{ path('contents_play', {'slug': content.slug }) }}" method="post">
+                                                <input class="btn btn-success btn-lg rounded-pill" type="submit" value="Voir le jeu">
+                                                <input id="uid" name="uid" type="hidden" value="{{ user.id }}">
+                                                <input id="cid" name="cid" type="hidden" value="{{ content.id }}">
+                                                <input id="www" name="www" type="hidden" value="{{ url('home_index') }}">
+                                                <input id="api" name="api" type="hidden" value="{{ url('api_get') }}">
+                                            </form>
+
                                         </div>
                                     </div>
                                 </div>
@@ -157,10 +161,13 @@
                                         </div>
                                         
                                         <div class="mb-5 mt-3">{{ content.description | raw}}</div>
-                                        <a class="btn btn-success btn-lg rounded-pill" href="{{ path('contents_play', {'slug': content.slug }) }}">
-                                        <i class="fa fa-close"></i>
-                                            Voir le jeu
-                                        </a>
+                                        <form action="/uploads/games/extract/gluciboat/index.php" method="post">
+                                            <input class="btn btn-success btn-lg rounded-pill" type="submit" value="Voir le jeu">
+                                            <input id="uid" name="uid" type="hidden" value="{{ user.id }}">
+                                            <input id="cid" name="cid" type="hidden" value="{{ content.id }}">
+                                            <input id="www" name="www" type="hidden" value="{{ url('home_index') }}">
+                                            <input id="api" name="api" type="hidden" value="{{ url('api_get') }}">
+                                        </form>
                                     </div>
                                 </div>
                             </div>
