--- a/templates/content/play.html.twig
+++ b/templates/content/play.html.twig
@@ -1,5 +1,10 @@
 <html>
-    <head></head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta name="sfp-data" content="{{ SFP_DATA }}">
+        <title>{{ content.title }}</title>
+    </head>
     <body style="margin: 0; padding: 0;">
         <iframe 
             id="sg-{{ content.slug }}"
