--- a/templates/home/legales_mentions.html.twig
+++ b/templates/home/legales_mentions.html.twig
@@ -22,7 +22,7 @@
                     L’URPS-ML-PACA (Union régionale des professionnels de Santé, Médecins libéraux, Provence Alpes Côte d’Azur) est responsable du traitement de vos données.
                     <br>Adresse : 37/39 Boulevard Vincent Delpuech, 13006 Marseille 
                     <br>Téléphone : <a href="tel:0496206080">04 96 20 60 80</a>	
-                    <br>Contact : <a href="mailto:contact_plateforme@urps-ml-paca.org">contact_plateforme@urps-ml-paca.org</a>	
+                    <br>Contact : <a href="mailto:contact-plateforme@urps-ml-paca.org ">contact-plateforme@urps-ml-paca.org</a>	
                     <br>La présente politique de protection des données personnelles s’applique à la plateforme accessible à l’adresse <a href="https://www.plateforme-etp-urps-ml-paca.fr" target="_blank">www.plateforme-etp-urps-ml-paca.fr</a> 
                 </p>
             </div>
@@ -88,7 +88,7 @@
             <h2 class="my-3 mx-4">Puis-je avoir des informations complémentaires ? Obtenir de l’aide ?</h2>
             <div class="mx-5">
                 <p>
-                    Vous pouvez contacter l’URPS-ML-PACA via la boîte mail suivante : <a href="mailto:contact_plateforme@urps-ml-paca.org">contact_plateforme@urps-ml-paca.org</a>
+                    Vous pouvez contacter l’URPS-ML-PACA via la boîte mail suivante : <a href="mailto:contact-plateforme@urps-ml-paca.org">contact-plateforme@urps-ml-paca.org</a>
                     Vous disposez du droit de déposer une réclamation à la Commission Nationale Informatique et Libertés dans les conditions indiquées sur son site internet : <a href="https://www.cnil.fr/fr/agir">https://www.cnil.fr/fr/agir</a>
 
                 </p>
@@ -107,7 +107,7 @@
             <div class="mx-5">
                 <p>
                     L’exercice de vos autres droits sur vos données nécessite la présentation d'une pièce d'identité par envoi d’un courrier électronique. Sans cette pièce, pour la protection de vos informations personnelles, il nous est impossible de vous les divulguer, de les modifier ou de les supprimer. 
-                    <br>Vous pouvez exercer vos droits par email, en précisant le droit que vous souhaitez précisément exercer dans l’objet de votre email : <a href="mailto:contact_plateforme@urps-ml-paca.org">contact_plateforme@urps-ml-paca.org</a>
+                    <br>Vous pouvez exercer vos droits par email, en précisant le droit que vous souhaitez précisément exercer dans l’objet de votre email : <a href="mailto:contact-plateforme@urps-ml-paca.org">contact-plateforme@urps-ml-paca.org</a>
                     <br>Une réponse vous sera alors adressée dans un délai de 1 mois suivant la réception de votre demande. 
                 </p>
             </div>               
