--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -4,7 +4,7 @@
  
 {% block main %}
     <div class="container">
-        <h1 class="my-5">Réinitialisé le mot de passe</h1>
+        <h1 class="my-5">Réinitialiser le mot de passe</h1>
         <div class="row">
             <div class="col">
                 <form method="post">
