--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -29,7 +29,6 @@
             <div class="row">
                 {% if contents is not empty %}
                     {% for content in contents %}
-                        {% set url = path('contents_show', {'slug': content.slug }) %}
                         <div class="col-md-6 col-lg-4">
                             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-{{ loop.index }}">
                                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -37,7 +36,7 @@
                                         <i class="fas fa-search-plus fa-3x"></i>
                                     </div>
                                 </div>
-                                <img class="img-fluid" src="{{ content.coverImage }}" alt="couverture serious game {{ content.title }}">
+                                <img class="img-fluid" src="{{ vich_uploader_asset(content, 'coverImageFile') | imagine_filter('thumbRec') }}" alt="couverture serious game {{ content.title }}">
                             </a>
                         </div>
 
@@ -64,7 +63,7 @@
                                                 <div class="carousel-inner">
                                                     {% for image in content.images %}
                                                         <div class="carousel-item {% if loop.first %}active{% endif%}">
-                                                            <img class="d-block w-100" src="{{ image.url }}" alt="{{ image.caption }}">
+                                                            <img class="d-block w-100" src="{{ vich_uploader_asset(image, 'imageFile') | imagine_filter('carousel') }}" alt="capture d'écran numéro {{ loop.index }}">
                                                         </div>
                                                     {% endfor %}    
                                                 </div>
@@ -78,16 +77,19 @@
                                                 </a>
                                             </div>
                                             
-                                            <p class="mb-5 mt-3">{{ content.description }}</p>
-                                            <a class="btn btn-success btn-lg rounded-pill" href="{{ path('contents_play', {'slug': content.slug }) }}">
-                                            <i class="fa fa-close"></i>
-                                                Voir le jeu
-                                            </a>
+                                            <p class="mb-5 mt-3">{{ content.description | raw}}</p>
+                                            <form action="{{ path('contents_play', {'slug': content.slug }) }}" method="post">
+                                                <input class="btn btn-success btn-lg rounded-pill" type="submit" value="Jouer">
+                                                <input id="cid" name="cid" type="hidden" value="{{ content.id }}">
+                                                <input id="www" name="www" type="hidden" value="{{ url('home_index') }}">
+                                                <input id="api" name="api" type="hidden" value="{{ url('api_get') }}">
+                                            </form>
+
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>                         
+                        </div>                       
                     {% endfor %}
                 {% else %}
                     <div class="alert alert-warning mt-3 mx-auto">
